introduced the popular badge updated the card overflow characteristics to incorporate it correctly.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -114,6 +114,7 @@ a {
 
 .badge--small {
   font-size: 1.6rem;
+  padding: 0.5rem 1.5rem;
 }
 
 @media screen and (min-width: 1024px) {
@@ -263,14 +264,19 @@ a {
 /* Cards */
 .card {
   border-radius: 7px;
-  box-shadow: 0 0 50px 10px #f3f3f3;
-  overflow: hidden;
+  box-shadow: 0 0 30px 10px #f3f3f3;
 }
-.card__header {
+.card__header,
+.card__body {
   padding: 2rem 3rem;
 }
+.card__header {
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
+}
 .card__body {
-  padding: 3rem;
+  border-bottom-left-radius: inherit;
+  border-bottom-right-radius: inherit;
 }
 
 .card--primary .card__header {
@@ -280,4 +286,61 @@ a {
 .card--secondary .card__header {
   background: var(--color-secondary);
   color: white;
+}
+
+.card--secondary .badge--secondary {
+  background: #02cdf1;
+}
+
+/* Plan */
+.plan__name {
+  color: white;
+  margin: 0;
+  font-size: 2.4rem;
+  font-weight: 700;
+}
+.plan__price {
+  font-size: 6rem;
+}
+.plan__billing-cycle {
+  font-size: 2.4rem;
+  opacity: 0.8;
+  margin-right: 1rem;
+}
+.plan__description {
+  font-size: 2rem;
+  letter-spacing: 1px;
+  font-weight: 300;
+  display: block;
+}
+.plan .list__item {
+  font-weight: 500;
+  margin-bottom: 2rem;
+  letter-spacing: 0.5px;
+}
+
+.plan--popular .card {
+  position: relative;
+}
+.plan--popular .card::before {
+  content: url(../Images/popular.svg);
+  width: 40px;
+  position: absolute;
+  top: -6px;
+  right: 5%;
+}
+
+@media screen and (min-width: 1024px) {
+  .plan_name {
+    font-size: 1.4rem;
+  }
+  .plan__price {
+    font-size: 5rem;
+  }
+  .plan__billing-cycle {
+    font-size: 1.6rem;
+  }
+  .plan__description {
+    font-size: 1.7rem;
+  }
 }
